name:                prob
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/prob#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable prob
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       sbv,
                       free,
                       containers,
                       probability,
                       mtl

  other-modules:       Crypto.Dist, Crypto.Prot, Crypto.Util

  default-extensions: GADTs, DeriveFunctor, ScopedTypeVariables, TemplateHaskell, StandaloneDeriving, DeriveDataTypeable, FlexibleInstances, MultiParamTypeClasses
